--- a/style.css
+++ b/style.css
@@ -106,3 +106,134 @@ body{
     margin-left: 89px;
 }
 
+#leg-one,#leg-two{
+    height: 15px;
+    width: 1px;
+    margin-left: 78px;
+    margin-top: 88px;
+    transform: rotate(40deg);
+    background: black;
+    position: absolute;
+}
+
+#leg-two{
+    transform: rotate(-40deg);
+    margin-left: 88px;
+}
+
+.guess-word{
+    height: 60px;
+    width: 100%;
+    margin-top: 15px;
+    text-align: center;
+}
+
+.guess-word p{
+    font-size: 12px;
+}
+
+.guess-word >span:nth-child(2){
+    font-size: 15px;
+    position: relative;
+    top: 7px;
+    white-space: nowrap;
+    font-weight: 600;
+}
+
+.keyboard-box{
+    margin-top: 10px;
+    height: 150px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 0.5rem;
+}
+
+.keyboard-box .keyboard-btns{
+    all: unset;
+    background: #fff;
+    padding: 5px;
+    border-radius: 3px;
+    height: 20px;
+    width: 18px;
+    text-align: center;
+    margin-left: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #000;
+    cursor: pointer;
+    font-size: 15px;
+}
+
+.face,.stomach,.hand-one,.hand-two,#leg-one,#leg-two{
+    display: none;
+}
+
+.result-box{
+    height: 449px;
+    width: 325px;
+    background: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 5px;
+    display: none;
+}
+
+.message{
+    position: absolute;
+    top: 37%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 24px;
+}
+
+.result-box >span{
+    position: absolute;
+    top: 46%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    white-space: nowrap;
+    font-size: 17px;
+}
+
+.result-box > button {
+    all: unset;
+    padding: 10px;
+    width: 100px;
+    background: orange;
+    color: black;
+    border-radius: 5px;
+    position: absolute;
+    top: 61%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    border: 2px solid black;
+}
+
+.result-answer{
+    font-weight: 600;
+}
+
+.reset-btn{
+    all: unset;
+    background: orange;
+    color: black;
+    border: 2px solid black;
+    text-align: center;
+    padding: 1px;
+    width: 50px;
+    font-size: 12px;
+    float: right;
+    cursor: pointer;
+    border-radius: 3px;
+    margin-right: 3px;
+}
+
+.wrong-guesses{
+    font-size: 12px;
+    margin-left: 10px;
+}
